--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>Epictask-CP02</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
